# Lighter

./: .gitignore  CMakeLists.txt
cmake/: FindDPP.cmake
src/: lighterwise.h  main.cpp  main.h  utils.cpp  utils.h
src/commands/: ChromeCount.cpp  ChromeCount.h  Command.cpp  Command.h  Info.cpp  Info.h  Ping.cpp  Ping.h  Role.cpp  Role.h
src/events/: CommandEvent.cpp  CommandEvent.h  Event.h  HelloEvent.cpp  HelloEvent.h  VerifyEvent.cpp  VerifyEvent.h
